--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
