--- a/API/composer.json
+++ b/API/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.3",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
@@ -25,7 +26,13 @@
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.61"
+        "doctrine/doctrine-fixtures-bundle": "^3.7",
+        "fakerphp/faker": "^1.24",
+        "phpunit/phpunit": "^11.4",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.2"
     },
     "config": {
         "allow-plugins": {
