--- a/API/.gitignore
+++ b/API/.gitignore
@@ -3,6 +3,11 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.env.*.local.php
+/.env
+/.env.php
+/.env.dist
+/.env.test
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
