--- a/CLIENT/.gitignore
+++ b/CLIENT/.gitignore
@@ -24,8 +24,7 @@ dist-ssr
 *.sw?
 
 # environment
-./.env
-./.env.local
-./.env.development
-./.env.production
-./.env.test
+.env
+.env.local
+.env.development
+.env.test
